--- a/package.json
+++ b/package.json
@@ -11,21 +11,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.4",
+    "@angular/animations": "^11.2.2",
+    "@angular/cdk": "^11.2.2",
     "@angular/common": "~11.0.4",
     "@angular/compiler": "~11.0.4",
-    "@angular/core": "~11.0.4",
+    "@angular/core": "^11.2.2",
     "@angular/forms": "~11.0.4",
     "@angular/platform-browser": "~11.0.4",
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
+    "primeflex": "^2.0.0",
+    "primeicons": "^4.1.0",
+    "primeng": "^11.2.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.4",
-    "@angular/cli": "~11.0.4",
+    "@angular/cli": "^11.2.2",
     "@angular/compiler-cli": "~11.0.4",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
